<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_color"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_gender"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_age"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:text="@string/select_date"
                android:textColor="@color/select_title_text"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/ll_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/current_date"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tv_selected_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:text="@string/select_time"
                android:textColor="@color/select_title_text"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/current_time_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/current_time"
                    android:textColor="@color/current_time_text"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tv_selected_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/selected_time_text"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>